# urbansoccer-server

./: .env.example  .gitignore  Dockerfile  README.md  SOLUCOES.md  docker-compose.yaml  pyproject.toml
urbansoccer_server/: main.py
urbansoccer_server/api/: campaigns.py  players.py  user_character.py  users.py
urbansoccer_server/core/: auth.py  config.py  database_init.py
urbansoccer_server/models/: campaign_model.py  player_model.py  user_character_model.py  user_model.py
urbansoccer_server/schemas/: __init_.py  campaign_schema.py  player_schema.py  user_character_schema.py  user_schema.py
