[project]
name = "urbansoccer-server"
version = "0.1.0"
description = ""
authors = [
    {name = "João Vitor",email = "jvitor.oliveira1803@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
