[tool.poetry]
name = "urbansoccer-server"
version = "0.1.0"
description = ""
authors = ["João Vitor <jvitor.oliveira1803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
motor = "^3.7.1"
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
